Fix coverage ignore

--- a/.gitignore
+++ b/.gitignore
@@ -196,5 +196,6 @@ test/RESOURCES/TMP_OUT/
 templates/Pong/Pong
 templates/*/RESOURCES/ENGINE_RESOURCES
 
-
+# Code Coverage 
 CoverageReport*/
+LastCoverageResults.log
